// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transformAdminConsent tests should add customized scope elements to formbag 1`] = `
{
  "data": {
    "consent.scopes.custom1.custom2.custom3": true,
    "consent.scopes.custom4.custom5.custom6": true,
    "consent.scopes.okta.authenticators.manage": true,
    "consent.scopes.okta.clients.manage": true,
  },
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.consent.scopes.granular.description",
          "dataSe": "consent-description",
        },
        "type": "Description",
      },
      {
        "noMargin": true,
        "options": {
          "content": "admin.consent.group.resource.policy",
          "dataSe": "scope-group--header",
          "level": 2,
          "visualLevel": 6,
        },
        "type": "Heading",
      },
      {
        "key": "consent.scopes.okta.clients.manage",
        "options": {
          "inputMeta": {
            "mutable": false,
            "name": "consent.scopes.okta.clients.manage",
            "type": "boolean",
          },
        },
        "translations": [
          {
            "i18nKey": "consent.scopes.okta.clients.manage.label",
            "name": "label",
            "noTranslate": true,
            "value": "okta.clients.manage",
          },
          {
            "i18nKey": "consent.scopes.okta.clients.manage.desc",
            "name": "description",
            "noTranslate": false,
            "value": "consent.scopes.okta.clients.manage.desc",
          },
        ],
        "type": "Field",
      },
      {
        "key": "consent.scopes.okta.authenticators.manage",
        "options": {
          "inputMeta": {
            "mutable": false,
            "name": "consent.scopes.okta.authenticators.manage",
            "type": "boolean",
          },
        },
        "translations": [
          {
            "i18nKey": "consent.scopes.okta.authenticators.manage.label",
            "name": "label",
            "noTranslate": true,
            "value": "okta.authenticators.manage",
          },
          {
            "i18nKey": "consent.scopes.okta.authenticators.manage.desc",
            "name": "description",
            "noTranslate": false,
            "value": "consent.scopes.okta.authenticators.manage.desc",
          },
        ],
        "type": "Field",
      },
      {
        "noMargin": true,
        "options": {
          "content": "admin.consent.group.system",
          "dataSe": "scope-group--header",
          "level": 2,
          "visualLevel": 6,
        },
        "type": "Heading",
      },
      {
        "key": "consent.scopes.custom1.custom2.custom3",
        "options": {
          "inputMeta": {
            "mutable": false,
            "name": "consent.scopes.custom1.custom2.custom3",
            "type": "boolean",
          },
        },
        "translations": [
          {
            "i18nKey": "consent.scopes.custom1.custom2.custom3.label",
            "name": "label",
            "noTranslate": true,
            "value": "custom1.custom2.custom3",
          },
          {
            "i18nKey": "consent.scopes.custom1.custom2.custom3.desc",
            "name": "description",
            "noTranslate": true,
            "value": "This will allow the app to view your custom info",
          },
        ],
        "type": "Field",
      },
      {
        "key": "consent.scopes.custom4.custom5.custom6",
        "options": {
          "inputMeta": {
            "mutable": false,
            "name": "consent.scopes.custom4.custom5.custom6",
            "type": "boolean",
          },
        },
        "translations": [
          {
            "i18nKey": "consent.scopes.custom4.custom5.custom6.label",
            "name": "label",
            "noTranslate": true,
            "value": "custom4.custom5.custom6",
          },
          {
            "i18nKey": "consent.scopes.custom4.custom5.custom6.desc",
            "name": "description",
            "noTranslate": true,
            "value": undefined,
          },
        ],
        "type": "Field",
      },
      {
        "label": "consent.required.consentButton",
        "options": {
          "actionParams": {
            "consent": true,
          },
          "dataType": "save",
          "includeData": false,
          "step": "admin-consent",
          "type": "button",
          "variant": "secondary",
        },
        "type": "Button",
      },
      {
        "label": "oform.cancel",
        "options": {
          "actionParams": {
            "consent": false,
          },
          "dataType": "cancel",
          "includeData": false,
          "step": "admin-consent",
          "type": "button",
          "variant": "secondary",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`transformAdminConsent tests should add non-customized scope elements to formbag 1`] = `
{
  "data": {
    "consent.scopes.okta.authenticators.manage": true,
    "consent.scopes.okta.clients.manage": true,
  },
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.consent.scopes.granular.description",
          "dataSe": "consent-description",
        },
        "type": "Description",
      },
      {
        "noMargin": true,
        "options": {
          "content": "admin.consent.group.resource.policy",
          "dataSe": "scope-group--header",
          "level": 2,
          "visualLevel": 6,
        },
        "type": "Heading",
      },
      {
        "key": "consent.scopes.okta.clients.manage",
        "options": {
          "inputMeta": {
            "mutable": false,
            "name": "consent.scopes.okta.clients.manage",
            "type": "boolean",
          },
        },
        "translations": [
          {
            "i18nKey": "consent.scopes.okta.clients.manage.label",
            "name": "label",
            "noTranslate": true,
            "value": "okta.clients.manage",
          },
          {
            "i18nKey": "consent.scopes.okta.clients.manage.desc",
            "name": "description",
            "noTranslate": false,
            "value": "consent.scopes.okta.clients.manage.desc",
          },
        ],
        "type": "Field",
      },
      {
        "key": "consent.scopes.okta.authenticators.manage",
        "options": {
          "inputMeta": {
            "mutable": false,
            "name": "consent.scopes.okta.authenticators.manage",
            "type": "boolean",
          },
        },
        "translations": [
          {
            "i18nKey": "consent.scopes.okta.authenticators.manage.label",
            "name": "label",
            "noTranslate": true,
            "value": "okta.authenticators.manage",
          },
          {
            "i18nKey": "consent.scopes.okta.authenticators.manage.desc",
            "name": "description",
            "noTranslate": false,
            "value": "consent.scopes.okta.authenticators.manage.desc",
          },
        ],
        "type": "Field",
      },
      {
        "label": "consent.required.consentButton",
        "options": {
          "actionParams": {
            "consent": true,
          },
          "dataType": "save",
          "includeData": false,
          "step": "admin-consent",
          "type": "button",
          "variant": "secondary",
        },
        "type": "Button",
      },
      {
        "label": "oform.cancel",
        "options": {
          "actionParams": {
            "consent": false,
          },
          "dataType": "cancel",
          "includeData": false,
          "step": "admin-consent",
          "type": "button",
          "variant": "secondary",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`transformAdminConsent tests should not add scopes when none exist in the transaction 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.consent.scopes.granular.description",
          "dataSe": "consent-description",
        },
        "type": "Description",
      },
      {
        "label": "consent.required.consentButton",
        "options": {
          "actionParams": {
            "consent": true,
          },
          "dataType": "save",
          "includeData": false,
          "step": "admin-consent",
          "type": "button",
          "variant": "secondary",
        },
        "type": "Button",
      },
      {
        "label": "oform.cancel",
        "options": {
          "actionParams": {
            "consent": false,
          },
          "dataType": "cancel",
          "includeData": false,
          "step": "admin-consent",
          "type": "button",
          "variant": "secondary",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
